# purple-hue

./: .gitignore  Cargo.toml  README.md
deployment/: PKGBUILD
src/: aqi.rs  main.rs  purple_air.rs  register_user.rs  settings.rs
src/purple_air/: aqi.rs  mod.rs
systemd/: purple-hue.service  purple-hue.timer
