[package]
name = "purple-hue"
version = "0.1.0"
authors = ["Mike Zorn <apechimp@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hueclient = "0.3.9"    # Rust library for Philips Hue lights
config = "0.10.1"                  # Layered configuration system for Rust applications.
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }                              # A generic serialization/deserialization framework
