[package]
name = "purple-hue"
version = "0.1.0"
authors = ["Mike Zorn <apechimp@icloud.com>"]
edition = "2018"
description = "Change a hue light's color based on air quality data from purple air."
license = "GPLv3"
license-file = "LICENSE"
repository = "https://github.com/apechimp/purple-hue"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
dirs = "1.0.4"
hueclient = "0.3.9"
log = "0.4"
quicli = "0.4"
failure = "0.1"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.2"
tint = "1.0.1"
